--- a/java/build.gradle
+++ b/java/build.gradle
@@ -108,4 +108,6 @@ dependencies {
     compile group: 'com.zackehh', name: 'siphash', version: '1.0.0'
     testCompile project(path: ':java-client', configuration: 'testFixtures')
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.quicktheories', name: 'quicktheories', version: '0.13'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
 }
