--- a/java/build.gradle
+++ b/java/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'java-library-distribution'
 apply plugin: 'maven'
 
-version = 'dev'
+version = '0.3'
 group = 'io.goshawkdb'
 archivesBaseName = "goshawkdb-collections"
 
