--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'java-library-distribution'
 apply plugin: 'maven'
+apply plugin: 'info.solidsoft.pitest'
 
 version = 'dev'
 group = 'io.goshawkdb'
